# C-Internet-Chat

./: CMakeLists.txt  README.md
include/: chat.hpp  chatconnection.hpp  chatroom.hpp  chatserver.hpp  chatuser.hpp  clientchatconnection.hpp  logger.hpp  message.hpp  messagetypes.hpp  util.hpp
include/client/: chatclient.hpp
include/server/: chatconnection.hpp  chatroom.hpp  chatserver.hpp  chatuser.hpp  logger.hpp  messagetypes.hpp
src/: chat.cpp  chatconnection.cpp  chatroom.cpp  chatserver.cpp  chatuser.cpp  main.cpp  message.cpp  server.cpp  util.cpp
src/client/: chatclient.cpp  main.cpp
src/server/: chatconnection.cpp  chatroom.cpp  chatserver.cpp  main.cpp  message.cpp
